// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-floating-label Autofocus test 1`] = `
<DocumentFragment>
  <div>
    <span
      class="floating-label"
    >
      <label
        class="floating-label__label floating-label__label--animate"
      >
        Autofocused field
      </label>
      <span
        class="textbox"
      >
        <input
          class="textbox__control"
          type="text"
          value=""
        />
      </span>
    </span>
    <br />
    <span
      class="floating-label"
    >
      <label
        class="floating-label__label"
      >
        Regular field
      </label>
      <span
        class="textbox"
      >
        <input
          class="textbox__control"
          type="text"
          value=""
        />
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-floating-label Control value from outside 1`] = `
<DocumentFragment>
  <p>
    <span
      class="floating-label"
    >
      <label
        class="floating-label__label"
      >
        Will convert to lowercase
      </label>
      <span
        class="textbox"
      >
        <input
          class="textbox__control"
          placeholder="Enter some UPPERCASE"
          size="30"
          type="text"
          value=""
        />
      </span>
    </span>
  </p>
  <p>
    <button
      class="btn btn--secondary"
    >
      Change text
    </button>
  </p>
  <p>
    <button
      class="btn btn--secondary"
    >
      Clear
    </button>
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-floating-label Default floating label 1`] = `
<DocumentFragment>
  <form>
    <p>
      <span
        class="floating-label"
      >
        <label
          class="floating-label__label"
          for="input-1"
        >
          Email address
        </label>
        <span
          class="textbox"
        >
          <input
            class="textbox__control"
            id="input-1"
            type="email"
            value=""
          />
        </span>
      </span>
    </p>
    <p>
      <button
        class="btn btn--secondary"
        type="submit"
      >
        Submit
      </button>
    </p>
  </form>
</DocumentFragment>
`;

exports[`Storyshots ebay-floating-label Floating label disabled 1`] = `
<DocumentFragment>
  <span
    class="floating-label"
  >
    <label
      class="floating-label__label floating-label__label--disabled"
      for="input-4"
    >
      Email address
    </label>
    <span
      class="textbox"
    >
      <input
        class="textbox__control"
        disabled=""
        id="input-4"
        type="text"
        value=""
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`Storyshots ebay-floating-label Floating label invalid 1`] = `
<DocumentFragment>
  <span
    class="floating-label"
  >
    <label
      class="floating-label__label floating-label__label--invalid"
      for="input-5"
    >
      Email address
    </label>
    <span
      class="textbox"
    >
      <input
        aria-invalid="true"
        class="textbox__control"
        id="input-5"
        type="text"
        value=""
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`Storyshots ebay-floating-label Floating label with controlled value 1`] = `
<DocumentFragment>
  <span
    class="floating-label"
  >
    <label
      class="floating-label__label"
      for="input-21"
    >
      Email address
    </label>
    <span
      class="textbox"
    >
      <input
        class="textbox__control"
        id="input-21"
        type="text"
        value="can't change"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`Storyshots ebay-floating-label Floating label with placeholder 1`] = `
<DocumentFragment>
  <span
    class="floating-label"
  >
    <label
      class="floating-label__label"
      for="input-3"
    >
      Email address
    </label>
    <span
      class="textbox"
    >
      <input
        class="textbox__control"
        id="input-3"
        placeholder="placeholder text"
        type="text"
        value=""
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`Storyshots ebay-floating-label Floating label with value 1`] = `
<DocumentFragment>
  <span
    class="floating-label"
  >
    <label
      class="floating-label__label"
      for="input-2"
    >
      Email address
    </label>
    <span
      class="textbox"
    >
      <input
        class="textbox__control"
        id="input-2"
        type="text"
        value="test"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`Storyshots ebay-floating-label Large Floating label 1`] = `
<DocumentFragment>
  <span
    class="floating-label floating-label--large"
  >
    <label
      class="floating-label__label"
      for="input-2"
    >
      Email address
    </label>
    <span
      class="textbox"
    >
      <input
        class="textbox__control textbox__control--large"
        id="input-2"
        type="text"
        value="test"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`Storyshots ebay-floating-label Select Floating label 1`] = `
<DocumentFragment>
  <span
    class="floating-label"
  >
    <label
      class="floating-label__label"
      for="input-2"
    >
      State
    </label>
    <span
      class="select"
    >
      <select
        id="input-2"
      >
        <option
          value=""
        />
        <option
          value="CA"
        >
          California
        </option>
        <option
          value="NY"
        >
          New York
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="icon icon--dropdown"
        focusable="false"
        height="8"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-dropdown"
        />
      </svg>
    </span>
  </span>
</DocumentFragment>
`;
